# workflow-automation

./: .gitignore  README.md  pyproject.toml
examples/: httpbin_status_check.yaml
src/workflow_automation/: cli.py  engine.py  http_caller.py  loader.py  models.py  storage.py  templating.py
src/workflow_automation/steps/: base.py  condition.py  delay.py  http_request.py  transform.py
tests/: test_engine.py  test_loader.py  test_models.py  test_storage.py  test_templating.py
